fix: increase header menu item letter-spacing to 1.1px

--- a/assets/custom-maelin.css
+++ b/assets/custom-maelin.css
@@ -204,6 +204,7 @@
 
 .header__menu-item span {
   font-size: 1.8rem;
+  letter-spacing: 1.1px;
 }
 
 @media screen and (min-width: 990px) {
